--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </HEader>
 
     <section>
-
+<img src="imagem/olamundo.png" alt="texto alternativo">
         <h2>HTML</h2>
         <p>Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
