texto em italico

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section>
 <img src="imagen/olamundo.png" alt="texto alternativo">
         <h2>HTML</h2>
-        <p>Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
+        <p class="texto-ingles">Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
 
