--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </HEader>
 
     <section>
-<img src="imagen/olamundo" alt="texto alternativo">
+<img src="olamundo" alt="texto alternativo">
         <h2>HTML</h2>
         <p class="texto-ingles">Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
