--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROJETO FORMADOREsssssS</title>
-   <link rel="stylesheet" href="style.css">
-
+    <title>PROJETO FORMADORES</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,13 +15,13 @@
     <HEader>
 
         <h1>Hello World</h1>
-        <p>Que bom te ver por aqui, Fulanosssssssssssssoooooooooooooooooggggggggggggttttttttttttts</p>
+        <p>Que bom te ver por aqui, Fulano</p>
 
 
     </HEader>
 
     <section>
-<img src="imagen/olamundo" alt="texto alternativo>
+<img src="olamundo.png" alt="texto alternativo">
         <h2>HTML</h2>
         <p class="texto-ingles">Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
@@ -42,3 +43,4 @@
 </body>
 
 </html>
+    
