--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <footer>
 
 
-        <p> UMA PAGINA DESENVOLVIDO POR ALURA START</p>
+        <p> UMA PAGINA DESENVOLVIDO POR ALURA STARTrrrrrrrr</p>
     </footer>
 
 
