--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJETO FORMADORES</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assents/style.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
     <footer>
 
 
-        <p> UMA PAGINA DESENVOLVIDO POR ALURA STARTrrrrrrrr</p>
+        <p> UMA PAGINA DESENVOLVIDO POR ALURA STARTrrrrrrrrs</p>
     </footer>
 
 
