--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
 
         <p> UMA PAGINA DESENVOLVIDO POR ALURA STARTrrrrrrrrs</p>
+
+
+
+        <script src="script.js"></script>
     </footer>
 
 
