--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <HEader>
 
-        <h1>Hello World</h1>
-        <p>Que bom te ver por aqui, <span id="nome-usuario"> Fulano! </span></p>
+        <h1>Hello World </h1>
+        <p>Que bom te ver por aqui, <span id="nome-usuario"> Fulanoo </span></p>
 
 
     </HEader>
