--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <HEader>
 
         <h1>Hello World </h1>
-        <p>Que bom te ver por aqui, <span id="nome-usuario"> Fulano </span></p>
+        <p>Que bom te ver por aqui, <span id="nome-usuario"> Fulanoo </span></p>
 
 
     </HEader>
