--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <h2>HTML</h2>
         <p class="texto-ingles">Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
+
+<h2>outras linguagem</h2>
+
+<li id="lista"> lista</li>
+
+const item = document.querySelector("#lista");
+item.textContent = linguagens[0];
+
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
 
 
