--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <h2>outras linguagem</h2>
 
-<li id="lista"> lista</li>
+<li id="lista"> aluno</li>
 
 
         <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
