--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="texto-ingles">Hypertext Markup Language (em português, Linguagem de Marcação de...</p>
         <h2>CSS</h2>
 
-<h2>outras linguagemm</h2>
+<h2>outras linguagemmm</h2>
 
 <li id="lista"> aluno</li>
 
